feat: enhance MIME type utilities with context menu and dialog improvements